--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/jerry4905/React-Portfolio"
+  "homepage": "https://jerry4905.github.io/React-Portfolio/"
 }
